--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.24.2",
-    "astro": "^4.10.2",
-    "sharp": "^0.32.5",
     "@astrojs/check": "^0.7.0",
+    "@astrojs/starlight": "^0.24.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.10.2",
+    "flowbite": "^2.4.1",
+    "sharp": "^0.32.5",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
 }
